; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_mac.c_macaddr_fast_cmp.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_mac.c_macaddr_fast_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @macaddr_fast_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @macaddr_fast_cmp(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32* @DatumGetMacaddrP(i32 %9)
  store i32* %10, i32** %7, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32* @DatumGetMacaddrP(i32 %11)
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @macaddr_cmp_internal(i32* %13, i32* %14)
  ret i32 %15
}

declare dso_local i32* @DatumGetMacaddrP(i32) #1

declare dso_local i32 @macaddr_cmp_internal(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
